By: Anka Rao, Priyanka Joseph
Review by: Nitish

--- a/GO_Project/style.css
+++ b/GO_Project/style.css
@@ -169,7 +169,99 @@ ol.progtrckr li.progtrckrTodo:before {
     bottom: -1.6em;
 }
 
+/* addtechnicalspecifications*/
 
+.marginT70 {
+	background-color: sand;
+	margin-top: 70px;
+}
+
+body {
+	background-color: seagreen
+	/*background-image : url("003+background+pattern+designs.jpg");*/
+}
+
+.td-input-box {
+	text-align: center;
+	margin: 100px;
+}
+
+.data-table {
+	text-align: center;
+	margin: 10px;
+}
+
+.intro {
+	background-color: #C9FFE5;
+}
+
+.padding {
+	padding: 50px;
+}
+
+.searchList {
+	cursor: pointer;
+	margin: 2px;
+	padding: 2px;
+	background-color: #00CEFF;
+}
+
+#demo {
+	color: blue;
+	text-align: center;
+}
+
+ img{
+        border-radius: 5px;
+       /* margin-left: 10%;*/
+    }
+    
+    .tooltip {
+        position: relative;
+        display: inline-block;
+        opacity: 1 !important;
+    }
+    
+    .tooltip .tooltiptext {
+        visibility: hidden;
+        width: 80px;
+        background-color: #555;
+        color: #fff;
+        text-align: center;
+        border-radius: 6px;
+        padding: 5px 0;
+        position: absolute;
+        z-index: 1;
+        bottom: 0;
+        left: 20px;        
+        opacity: 0;
+        transition: opacity 0.3s;
+    }
+    
+    .tooltip .tooltiptext::after {
+        
+        position: absolute;
+        top: 100%;
+        left: 50%;
+        margin-left: -5px;
+        border-width: 5px;
+        border-style: solid;
+        border-color: #555 transparent transparent transparent;
+    }
+    
+    .tooltip:hover .tooltiptext {
+        visibility: visible;
+        opacity: 1;
+    }
+    
+    .logo{
+	  	background-color:white;
+	  	text-align: right;
+	  	
+  	}
+	.logo>img{
+	 	max-width:250px;
+	}
 
 
 
