--- a/GO_Project/style.css
+++ b/GO_Project/style.css
@@ -16,7 +16,7 @@
 .addressList{
     overflow-y: scroll;    
     height : 75vh;
-    background-color:#d3d7cf; 
+    background-color:#eeeeec; 
     border-style: solid;
     border-color: #87cefa;
 }
@@ -225,6 +225,8 @@ ol.progtrckr li.progtrckrTodo:before {
    
     transform: scale(1.25);
 }
-
+.table-success{
+	background-color: #c3e6cb;
+}
 
 	
