--- a/GO_Project/style.css
+++ b/GO_Project/style.css
@@ -11,7 +11,6 @@
 }
 .logo>img{
    max-width:250px;
-   height: inherit;
 }
 
 .addressList{
@@ -25,7 +24,7 @@
     margin: 2px;
     background-color:#ffffff;
     list-style: none;
-    padding-left:10%;
+    padding-left: 10%;
     width: 100%;
     display: flex;
 }
@@ -46,14 +45,9 @@
     width: 100%;
 }
 
-.well1{ background-color:lightblue;
+.well1{
+	 background-color:lightblue;
 }
-img {
-    vertical-align: middle;
-    height: 12%;
-    float: left;
-}
-	
 .head{
     background-color:lightblue;
     
@@ -85,6 +79,8 @@ img {
     width : 80vw;
 }
 
+
+
 /*----------------------progress bar-------------------*/
 .orderDetailsImg{
     max-width: 150px;
@@ -101,11 +97,7 @@ margin-left:35px;
 padding: 0px 20px 0px 20px;
 
 }
-.orderId {img {
-    vertical-align: middle;
-    height: 12%;
-    float: left;
-}
+.orderId {
     float:right;
 }
 .orderViewer img {
@@ -140,14 +132,14 @@ ol.progtrckr li {
     line-height: 3em;
 }
 
-ol.progtrckr[data-progtrckr-steps="2"]li { width: 49%; }
+ol.progtrckr[data-progtrckr-steps="2"] li { width: 49%; }
 ol.progtrckr[data-progtrckr-steps="3"] li { width: 33%; }
 ol.progtrckr[data-progtrckr-steps="4"] li { width: 24%; }
 ol.progtrckr[data-progtrckr-steps="5"] li { width: 19%; }
 ol.progtrckr[data-progtrckr-steps="6"] li { width: 16%; }
 ol.progtrckr[data-progtrckr-steps="7"] li { width: 14%; }
 ol.progtrckr[data-progtrckr-steps="8"] li { width: 12%; }
-ol.progtrckr[data-progtrckr-steps="9"] li { width: 12%11%; }
+ol.progtrckr[data-progtrckr-steps="9"] li { width: 11%; }
 
 ol.progtrckr li.progtrckrDone {
     color: black;
@@ -196,11 +188,7 @@ ol.progtrckr li.progtrckrTodo:before {
     color: silver;
     background-color: white;
     font-size: 1.5em;
-    bottom: -1.6em;img {
-    vertical-align: middle;
-    height: 12%;
-    float: left;
-}
+    bottom: -1.6em;
 }
 .listImage{
     max-width: 100%;
@@ -214,11 +202,7 @@ ol.progtrckr li.progtrckrTodo:before {
 .marginT10{
     margin-top: 10%;
 }
-.listItemCell{img {
-    vertical-align: middle;
-    height: 12%;    height: inherit;
-    float: left;
-}
+.listItemCell{
     background-color:#D3D3D3;
     margin :15px;
     height: 250px;
@@ -235,17 +219,22 @@ ol.progtrckr li.progtrckrTodo:before {
 .proImage {
     max-height: 200px;
     transition: transform .2s;
+   
 }
 .proImage :hover{
    
     transform: scale(1.25);
 }
- HEAD
+
 .table-success{
 	background-color: #c3e6cb;
 }
 
 	
+.imageView {
+	max-width:100%;
+	height:120px;
+	}
 	
 
  
@@ -268,11 +257,7 @@ ol.progtrckr li.progtrckrTodo:before {
 
     .table {
         border: 1px solid grey;
-        width: 100%;img {
-    vertical-align: middle;
-    height: 12%;
-    float: left;
-}
+        width: 100%;
         margin-left: 25%;
         margin-right: 25%;
     }
@@ -287,4 +272,3 @@ ol.progtrckr li.progtrckrTodo:before {
         padding: 5px;
     }
 */
-
