--- a/GO_Project/style.css
+++ b/GO_Project/style.css
@@ -11,6 +11,7 @@
 }
 .logo>img{
    max-width:250px;
+   height: inherit;
 }
 
 .addressList{
@@ -24,7 +25,7 @@
     margin: 2px;
     background-color:#ffffff;
     list-style: none;
-    padding-left: 10%;
+    padding-left:10%;
     width: 100%;
     display: flex;
 }
@@ -45,9 +46,10 @@
     width: 100%;
 }
 
-.well1{
-	 background-color:lightblue;
+.well1{ background-color:lightblue;
 }
+
+	
 .head{
     background-color:lightblue;
     
@@ -79,8 +81,6 @@
     width : 80vw;
 }
 
-
-
 /*----------------------progress bar-------------------*/
 .orderDetailsImg{
     max-width: 150px;
@@ -105,7 +105,8 @@ padding: 0px 20px 0px 20px;
     vertical-align: middle;
     max-width:100%;
     height:150px;
-}listImage
+}
+listImage
 .orderViewer div{
     display: inline-block;
     width: 300px;
@@ -132,14 +133,14 @@ ol.progtrckr li {
     line-height: 3em;
 }
 
-ol.progtrckr[data-progtrckr-steps="2"] li { width: 49%; }
+ol.progtrckr[data-progtrckr-steps="2"]li { width: 49%; }
 ol.progtrckr[data-progtrckr-steps="3"] li { width: 33%; }
 ol.progtrckr[data-progtrckr-steps="4"] li { width: 24%; }
 ol.progtrckr[data-progtrckr-steps="5"] li { width: 19%; }
 ol.progtrckr[data-progtrckr-steps="6"] li { width: 16%; }
 ol.progtrckr[data-progtrckr-steps="7"] li { width: 14%; }
 ol.progtrckr[data-progtrckr-steps="8"] li { width: 12%; }
-ol.progtrckr[data-progtrckr-steps="9"] li { width: 11%; }
+ol.progtrckr[data-progtrckr-steps="9"] li { width: 12%11%; }
 
 ol.progtrckr li.progtrckrDone {
     color: black;
@@ -190,6 +191,9 @@ ol.progtrckr li.progtrckrTodo:before {
     font-size: 1.5em;
     bottom: -1.6em;
 }
+   
+/*................productlist.....................................*/
+
 .listImage{
     max-width: 100%;
     height : 150px;
@@ -202,40 +206,71 @@ ol.progtrckr li.progtrckrTodo:before {
 .marginT10{
     margin-top: 10%;
 }
+.margin10{
+    margin:10px;
+}
 .listItemCell{
-    background-color:#D3D3D3;
     margin :15px;
+     height: 300px;
+     border: 1px solid #BFB3B3;
+      border-radius: 5px;
+       padding: 15px;
+       word-wrap: break-word;
+       text-align: center;
+ }  
+    .listItemCell :hover{
+         max-height: 300px;
+          box-shadow: 2px 4px 10px black;
+          transform: scale(1.15);
+         }
+/*.listItemCell{
+    text-align: bottom;
+    height: 20%;    
+    float: left;
+    width:20%;
+}
+   /* .thumb{
+    background-color:white;
+    margin :-18px;
     height: 250px;
-    border: 1px solid #BFB3B3;
+    border: 1px solid whitesmoke;
     border-radius: 5px;
-    padding: 15px;
+    padding:10px;
     cursor: pointer;
+    border-color: slategrey;
 }  
 .listItemCell :hover{
-    max-height: 250px;
+    max-height: 10%;
     box-shadow: 2px 4px 10px black;
     transform: scale(1.15);
-}
+}*/
 .proImage {
-    max-height: 200px;
+    max-height:10%;
     transition: transform .2s;
-   
-}
-.proImage :hover{
-   
-    transform: scale(1.25);
 }
 
 .table-success{
 	background-color: #c3e6cb;
 }
 
-	
-.imageView {
-	max-width:100%;
-	height:120px;
-	}
-	
+.dropstyle {
+    float: right;
+}
+
+.gla {
+    width: 47%;
+    font-size: 26px;
+    text-align: center;
+    padding-left: 300px;
+}
+.search{
+    text-align: center;
+}
+
+.search-box{
+    margin: 2%;
+    width: 70%;
+}
 
  
 /*----------------------Registeration-------------------*/
@@ -257,7 +292,11 @@ ol.progtrckr li.progtrckrTodo:before {
 
     .table {
         border: 1px solid grey;
-        width: 100%;
+        width: 100%;img {
+    vertical-align: middle;
+    height: 12%;
+    float: left;
+}
         margin-left: 25%;
         margin-right: 25%;
     }
@@ -272,3 +311,4 @@ ol.progtrckr li.progtrckrTodo:before {
         padding: 5px;
     }
 */
+
