--- a/GO_Project/style.css
+++ b/GO_Project/style.css
@@ -13,6 +13,77 @@
    max-width:250px;
 }
 
+.animate-enter, 
+.animate-leave { 
+	-webkit-transition: 500ms cubic-bezier(0, 0.000, 1.000, 1.000) all;
+	-moz-transition: 500ms cubic-bezier(0, 0.000, 1.000, 1.000) all;
+	-ms-transition: 500ms cubic-bezier(0, 0.000, 1.000, 1.000) all;
+	-o-transition: 500ms cubic-bezier(0, 0.000, 1.000, 1.000) all;
+	transition: 500ms cubic-bezier(0, 0.000, 1.000, 1.000) all;
+	position: relative;
+	display: block;
+} 
+
+.animate-leave.animate-leave-active,
+.animate-enter {
+    -webkit-transform: scale(0);
+    -moz-transform: scale(0);
+    -ms-transform: scale(0);
+    -o-transform: scale(0);
+    transform: scale(0);
+	height: 0px;
+	opacity: 0;
+}
+
+.animate-enter.animate-enter-active,
+.animate-leave {
+    -webkit-transform: scale(1);
+    -moz-transform: scale(1);
+    -ms-transform: scale(1);
+    -o-transform: scale(1);
+    transform: scale(1);
+	
+	opacity: 1;
+}
+
+.tooltip {
+    position: relative;
+    display: inline-block;
+    opacity: 1 !important;
+}
+
+.tooltip .tooltiptext {
+    visibility: hidden;
+    width: 80px;
+    background-color: #555;
+    color: #fff;
+    text-align: center;
+    border-radius: 6px;
+    padding: 5px 0;
+    position: absolute;
+    z-index: 1;
+    bottom: 0;
+    left: 20px;        
+    opacity: 0;
+    transition: opacity 0.3s;
+}
+
+.tooltip .tooltiptext::after {
+    
+    position: absolute;
+    top: 100%;
+    left: 50%;
+    margin-left: -5px;
+    border-width: 5px;
+    border-style: solid;
+    border-color: #555 transparent transparent transparent;
+}
+
+.tooltip:hover .tooltiptext {
+    visibility: visible;
+    opacity: 1;
+}
+
 .addressList{
     overflow-y: scroll;    
     height : 75vh;
