--- a/GO_Project/style.css
+++ b/GO_Project/style.css
@@ -6,6 +6,9 @@
     text-align: right;
     
 }
+.imageList{
+    max-height:200px;
+}
 .displayInlineBlock{
     display: inline-block;
 }
@@ -177,7 +180,7 @@ padding: 0px 20px 0px 20px;
     max-width:100%;
     height:150px;
 }
-listImage
+
 .orderViewer div{
     display: inline-block;
     width: 300px;
